--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,120 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Caveat:wght@400..700&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Edu+VIC+WA+NT+Beginner:wght@400..700&family=Foldit:wght@100..900&family=Ga+Maamli&family=Jersey+10&family=Kalnia+Glaze:wght@100..700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=New+Amsterdam&family=PT+Sans+Narrow:wght@400;700&family=Playwrite+DE+Grund:wght@100..400&family=Playwrite+FR+Moderne:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App{
+  background-color: #c4c2c6;
+  color: #000;
+  font-family:'PT Sans Narrow' ;
+  font-size: 1rem;
+  align-items: center;
+  margin: auto;
+  
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1{
+  font-weight: 700;
+  font-size: 2.5rem;
+  font-family: "PT Sans Narrow";
+  margin: 3rem 45%;
+  text-transform: uppercase;
+  width: 200px;
+  height: 70px;
+  border: 1px solid #fff;
+  border-radius: 10px;
+  padding-left: 4.5rem;
+  transition: width 2s;
+  transition: color 2s;
+  transition: background-color 2s;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h1:hover {
+  width: 300px;
+  background-color: #178b8b;
+  color: #fff;
+}
+.top-page p {
+margin: 1rem 15%;
+ font-size: 1rem;
+ text-align: center;
+ font-size: 20px;
+}
+.input-form{
+  margin: 2rem 35%;
   display: flex;
   flex-direction: column;
+  padding: 1rem;
+  border: .5px solid #000;
+}
+.answer-div,
+.result-form{
+  display: flex;
+  flex-direction: column;
+}
+button{
+  background-color: #fff;
+  height: 3rem;
+  width: 8rem;
+  border-radius: 10px;
+  margin: 1rem 25%;
+}
+ul{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  border: .5px solid #000;
+  align-content: center;
+  gap: 50px;
+  
+}
+li {
+  height: 1rem;
+  max-width: 8rem;
+  background-color: #fff;
+  list-style: none;
+  border-radius: 10px;
+  text-align: center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 10px 20px;
+  margin: 5px;
+  margin-left: -20px;
+}
+span{
+
+padding: 0.5rem;
+border: none;
+align-content: center;
+}
+.input-form span {
+  font-weight: 700;
 }
 
-.App-link {
-  color: #61dafb;
+.selected {
+  background-color: aqua;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media screen {
+  form {
+    min-width: 500px;
+    align-items: flex-start;
+      }
+}
+.footer-section{
+  margin: auto;
+  background-color: #cdc7bf;
+}
+.footer-section  div {
+  text-align: center  ;
+  border-radius: 10px;
+  width: 100px;
+  height: 100px;
+  background-color: #cdc7bf;
+  position: relative;
+  animation-name: example;
+  animation-duration: infinite;
+  animation-delay: 1s;
+}
+
+@keyframes example {
+  0%   {background-color:#c4c2c6; left:5%px; top:0px;}
+  25%  {background-color:#6623a9; left:20%; top:0px;}
+  50%  {background-color:#b4920d; left:20%; top:200%;}
+  75%  {background-color:#146194; left:20%; top:20%;}
+  100% {background-color:#7fffd4; left:0px; top:0px;}
 }
